platform/gitops/components/secrets/external-secrets/overlays/mac-orbstack-single/patch-webhook-failure-policy-ignore.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: secretstore-validate
webhooks:
  - name: validate.secretstore.external-secrets.io
    failurePolicy: Ignore
  - name: validate.clustersecretstore.external-secrets.io
    failurePolicy: Ignore
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: externalsecret-validate
webhooks:
  - name: validate.externalsecret.external-secrets.io
    failurePolicy: Ignore
